# gpu-basics

./: CMakeLists.txt  README.md  build.sh  kernel.cl  main.cpp  run_teach_cluster.sh  vec_mul_driver.cpp
src/: vec_mul.cl  vec_mul.cu  vec_mul_cuda.cu
